test_suite/tests/ui/fail/invalid_attr_value_for_option/invalid_option_flag.rs
use clapi::macros::*;

#[command]
#[option(x, flag=1)]
fn app(x: i64){}

fn main(){}