test_suite/tests/ui/fail/invalid_attr_value_for_option/invalid_option_flag.stderr
error: custom attribute panicked
 --> $DIR/invalid_option_flag.rs:3:1
  |
3 | #[command]
  | ^^^^^^^^^^
  |
  = help: message: option `flag` must be a bool literal
